2003-12-03  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Corrected gnome-commander POT filename.

2003-12-01  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: libbonoboui has been branched.

2003-12-01  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: libbonobo has been branched.

2003-12-01  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Removed developer-app section and moved
	everything in it to extras.

2003-12-01  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added gnome-commander.

2003-11-28  Christian Neumair  <chris@gnome-de.org>

	* translation-status.xml: Moved libgnomecups/gnome-cups-manager back
	to extras, fixed branch information for rhythmbox.

2003-11-26  Ole Laursen  <olau@hardworking.dk>

	* translation-status.xml: Moved sound-juicer to Fifth Toe, gcm and
	gnomeradio to extras and deleted stickynotes_applet (since it has
	been integrated with gnome-applets).

2003-11-24  Christian Neumair  <chris@gnome-de.org>

	* translation-status.xml: Added libgnomecups and moved
	gnome-cups-manager to office.

2003-11-24  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Fixed double gnome-control-center I put
	here.

2003-11-24  Danilo Šegan  <dsegan@gmx.net>

	* translation-status.xml: Added gnome-cups-manager to extras.

2003-11-20  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added marlin.

2003-11-17  Ole Laursen  <olau@hardworking.dk>

	* translation-status.xml: Moved monster-masher and hardware-monitor
	to the Fifth Toe.

2003-11-17  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: libwnck has been branched.

2003-11-14  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: atk has been branched.

2003-11-11  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: gnome-desktop and gnome-session
	have been branched.

2003-11-10  Christian Rose  <menthos@menthos.com>
