@@ -1831,11 +1831,11 @@
       </component>
     </version>
   </module>
-  <module name="libmrproject">
+  <module name="libplanner">
     <version release="gnome-2.6">
-      <component name="libmrproject" dir="libmrproject" group="office">
-	<podir dir="po"/>
-	<potname name="libmrproject.pot"/>
+      <component name="libplanner" dir="planner" group="office">
+	<podir dir="po-libplanner"/>
+	<potname name="planner.pot"/>
 	<branch name="HEAD"/>
 	<regenerate/>
 	<download/>
@@ -1959,11 +1959,11 @@
       </component>
     </version>
   </module>
-  <module name="mrproject">
+  <module name="planner">
     <version release="gnome-2.6">
-      <component name="mrproject" dir="mrproject" group="office">
+      <component name="planner" dir="planner" group="office">
 	<podir dir="po"/>
-	<potname name="mrproject.pot"/>
+	<potname name="planner.pot"/>
 	<branch name="HEAD"/>
 	<regenerate/>
 	<download/>
