@@ -1,3 +1,7 @@
+2003-12-03  Christian9 Neumair  <chris@gnome-de.org>
+
+	* translation-status.xml: Replaced (lib)mrproject by (lib)planner.
+
 2003-12-03  Danilo Šegan  <dsegan@gmx.net>
 
 	* translation-status.xml: Corrected gnome-commander POT filename.
